--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@autocomplete/material-ui": "^0.0.17",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.2.1",
     "@mui/styled-engine-sc": "^6.2.1",
     "@testing-library/jest-dom": "^5.17.0",
